--- a/src/views/partials/navigationM.ejs
+++ b/src/views/partials/navigationM.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
     <a class="navbar-brand" href="/mode">
-        <img src="/img/logo.png" style="height: 30px" class="d-inline-block align-top"> White Sport
+        <img src="/img/logows.png" style="height: 30px" class="d-inline-block align-top"> White Sport
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
         aria-expanded="false" aria-label="Toggle navigation">
