--- a/src/views/cat.ejs
+++ b/src/views/cat.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link
       rel="shortcut icon"
-      href="https://res.cloudinary.com/dujg9sojg/image/upload/v1591400278/favicon-32x32.png"
+      href=""
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
