--- a/src/views/index2.ejs
+++ b/src/views/index2.ejs
@@ -30,12 +30,12 @@
                   <th scope="row">Stock</th>
                   <td scope="col"><%= image.cantidad %></td>
                 </tr>
-                <tr>
+                <!-- <tr>
                   <th scope="row">Codigo</th>
                   <td scope="col"><%= image.codigo %></td>
-                  <!-- <th scope="row">Ciclo</th>     
-                                        <td scope="col"><%= image.ciclo %></td> -->
-                </tr>
+                  <th scope="row">Ciclo</th>
+                  <td scope="col"><%= image.ciclo %></td>
+                </tr> -->
                 <td scope="col" align="justify" colspan="4">
                   <p class="card-text"><%= image.description %></p>
                 </td>
