--- a/src/views/update.ejs
+++ b/src/views/update.ejs
@@ -58,7 +58,7 @@
                 </div>
                 <div class="form-group">
                   <input
-                    type="number"
+                    type="text"
                     name="cantidad"
                     placeholder="Cantidad en Stock"
                     class="form-control"
